@@ -10,6 +10,12 @@ general
    supporting classes (such as AutoPilot) have been updated to reflect new
    capabilities
 
+-- throughout the framework, the listed order of objects/variables being initialized
+   by constructors is has been aligned to how they are actually initialized by
+   the code generated by the compiler.  This change does no impact the functionality
+   of the codebase, it mearly reduces the number of emitted warning displayed by
+   recent versions of gcc.
+
 --------------------------------------------------------------------------------
 basic
 
@@ -43,6 +49,10 @@ simulation
          climb, etc.  These are pilot characteristics in defining how a plane
          is flown -- not physical performance characteristics associated with
          the vehicle itself.
+
+   AngleOnlyTrackManager class
+      1) initialized a few previously uninitialized variables -- the initialization
+         didn't matter, but we like to adhere to coding stds.
 
    DynamicsModels class
       1) set commanded heading, velocity, and altitude now take additional
